# emscripten-fastcomp

./: .gitignore  CMakeLists.txt  Makefile  Makefile.config.in  Makefile.rules  OWNERS  PRESUBMIT.py  README.txt  codereview.settings  configure  emscripten-version.txt  readme-emscripten-fastcomp.txt  temptest.sh
autoconf/: config.sub  configure.ac
cmake/: config-ix.cmake
cmake/modules/: AddLLVM.cmake  HandleLLVMOptions.cmake
docs/: LangRef.rst  PNaClDeveloperGuide.rst  PNaClLangRef.rst  ReleaseNotes.rst  index.rst
include/llvm/: GlobalValue.h  InitializePasses.h  Intrinsics.td  Module.h  Value.h
include/llvm-c/: lto.h
lib/: CMakeLists.txt  LLVMBuild.txt  Makefile
lib/Analysis/: CMakeLists.txt  LLVMBuild.txt  Makefile  TargetLibraryInfo.cpp
lib/AsmParser/: Parser.cpp
lib/Bitcode/: CMakeLists.txt  LLVMBuild.txt  Makefile
lib/CodeGen/: Analysis.cpp  BranchFolding.cpp  CallingConvLower.cpp  IntrinsicLowering.cpp  LLVMTargetMachine.cpp  LexicalScopes.cpp  MachineBasicBlock.cpp  Passes.cpp  PrologEpilogInserter.cpp  StackColoring.cpp  TargetLoweringObjectFileImpl.cpp
lib/IR/: AsmWriter.cpp  CMakeLists.txt  Constants.cpp  Globals.cpp  InlineAsm.cpp  Instructions.cpp  Module.cpp  NaClAtomicIntrinsics.cpp  Verifier.cpp
test/: CMakeLists.txt  Makefile  lit.cfg
tools/: CMakeLists.txt  LLVMBuild.txt  Makefile
tools/pnacl-llc/: CMakeLists.txt  LLVMBuild.txt  Makefile  SRPCStreamer.cpp  SRPCStreamer.h  ThreadedFunctionQueue.h  ThreadedStreamingCache.cpp  ThreadedStreamingCache.h  nacl_file.cpp  pnacl-llc.cpp  srpc_main.cpp
utils/: Makefile
(+784 files in other folders)
